--- a/Atividades/TestQuizEscutaC2/index.html
+++ b/Atividades/TestQuizEscutaC2/index.html
@@ -582,10 +582,12 @@ async function saveGrade(userId, newGrade, isLinked) {
 }
 
 async function isStudentLinkedToProfessor(userId) {
-    const dbRef = firebase.database().ref(`usuarios/${userId}/professor`);
+    // Agora usando atrelado_professor em vez de professor
+    const dbRef = firebase.database().ref(`usuarios/${userId}/atrelado_professor`);
     try {
         const snapshot = await dbRef.once("value");
-        return snapshot.exists(); 
+        // Verifica se esse campo existe e não está vazio
+        return snapshot.exists() && snapshot.val() !== "";
     } catch (error) {
         console.error("Error checking professor linkage:", error);
         return false;
