--- a/Atividades/TestwordB2C/index.html
+++ b/Atividades/TestwordB2C/index.html
@@ -592,7 +592,7 @@ async function unlockNextPhase(userId, grade) {
 async function saveGradeToDatabase(userId, newGrade, isLinked) {
     const { level, unit } = getParamsFromURL();
     // Ajuste o campo no DB
-    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/nota2`);
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/test - complete word 1`);
 
     try {
         const snapshot = await dbRef.once('value');
@@ -622,7 +622,7 @@ function loadExistingGrade() {
         if (user) {
             const userId = user.uid;
             const { level, unit } = getParamsFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/nota2`);
+            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/test - complete word 1`);
 
             try {
                 const snapshot = await dbRef.once('value');
